task-one/ingress/ingress-blue-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blue-app-svc
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blue-app-svc
            port:
              number: 8080
  ingressClassName: nginx
