task-one/ingress/ingress-green-app-canary.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-green-app-svc
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: green-app-svc
            port:
              number: 8081
  ingressClassName: nginx
